created auxiliary socket

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,7 @@
 include(CMakePrintHelpers)
 
+add_subdirectory(auxiliary)
+
 add_lib(template_lib_one
         SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/TestClass.cpp
         )
