adding socket for secure (ciphered) communication

--- a/src/auxiliary/CMakeLists.txt
+++ b/src/auxiliary/CMakeLists.txt
@@ -4,4 +4,5 @@ include(CMakePrintHelpers)
 add_lib(auxiliary
         SOURCES
         ${CMAKE_CURRENT_SOURCE_DIR}/socket/ZMQSocket.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/socket/SecureSocket.cpp
         )
