--- a/tests/integration_tests/CMakeLists.txt
+++ b/tests/integration_tests/CMakeLists.txt
@@ -3,6 +3,6 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS_DEBUG} -w -O0 -g3 -no-pie")
 
 
 package_add_test(exampleIntegrationTest
-        SOURCES exampleIntegrationTest.cpp
-        DEPENDS template_lib_one template_lib_two
+        SOURCES SecureSocketTest.cpp
+        DEPENDS auxiliary
         )
