--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,3 +2,11 @@ include(CMakePrintHelpers)
 
 add_subdirectory(auxiliary)
 
+add_lib(project_lib
+        SOURCES
+        ${CMAKE_CURRENT_SOURCE_DIR}/TaskScheduler.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/TaskExecutor.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/CommandLineTaskCreator.cpp
+        DEPENDS
+        auxiliary
+        )
