--- a/tests/unit_tests/CMakeLists.txt
+++ b/tests/unit_tests/CMakeLists.txt
@@ -4,6 +4,7 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS_DEBUG} -w -O0 -g3 -no-pie")
 package_add_test(exampleUnitTest
         SOURCES
         AESCryptographerTest.cpp
+        RSACryptographerTest.cpp
         DEPENDS auxiliary
         )
 
