listener service done

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,8 @@ add_lib(project_lib
         ${CMAKE_CURRENT_SOURCE_DIR}/TaskScheduler.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/TaskExecutor.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/CommandLineTaskCreator.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/ClientService.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/PeerToPeerConnection.cpp
         DEPENDS
         auxiliary
         )
