--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,8 +7,9 @@ add_lib(project_lib
         ${CMAKE_CURRENT_SOURCE_DIR}/TaskScheduler.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/TaskExecutor.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/CommandLineTaskHandler.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/ClientService.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/PeerToPeerConnection.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/RemoteHostListenerService.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/RemoteHostConnectionController.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/ClientConnectionController.cpp
         DEPENDS
         auxiliary
         )
