--- a/tests/integration_tests/CMakeLists.txt
+++ b/tests/integration_tests/CMakeLists.txt
@@ -2,7 +2,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG} -w -O0 -g3 -no-pie")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS_DEBUG} -w -O0 -g3 -no-pie")
 
 
-package_add_test(exampleIntegrationTest
+package_add_test(SecureSocketTest
         SOURCES SecureSocketTest.cpp
         DEPENDS auxiliary
         )
