added helper functions to socket

--- a/tests/unit_tests/CMakeLists.txt
+++ b/tests/unit_tests/CMakeLists.txt
@@ -5,6 +5,7 @@ package_add_test(CryptoUnitTests
         SOURCES
         AESCryptographerTest.cpp
         RSACryptographerTest.cpp
+        ZMQSocketTest.cpp
         DEPENDS auxiliary
         )
 
