--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,11 +4,15 @@ add_subdirectory(auxiliary)
 
 add_lib(project_lib
         SOURCES
-        ${CMAKE_CURRENT_SOURCE_DIR}/TaskScheduler.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/TaskExecutor.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/CommandLineTaskHandler.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/ClientService.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/PeerToPeerConnection.cpp
+        remote/RemoteHostListenerService.cpp
+        remote/RemoteHostConnectionController.cpp
+        client/ClientConnectionController.cpp
+        client/ServiceConnector.cpp
+        PeerFactory.cpp
+
+        TaskScheduler.cpp
+        TaskExecutor.cpp
+        CommandLineTaskHandler.cpp
         DEPENDS
         auxiliary
         )
