finally figured out this shit

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -3,3 +3,13 @@ include(CMakePrintHelpers)
 add_app(${CMAKE_PROJECT_NAME}
         ssh-service.cpp
         )
+
+add_app(test_program
+        test_program.cpp
+        )
+
+
+add_app(process_control
+        process_control.cpp
+        )
+
