--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,10 +6,11 @@ add_lib(project_lib
         SOURCES
         remote/RemoteHostListenerService.cpp
         remote/RemoteHostConnectionController.cpp
+        remote/ShellHandler.cpp
+        remote/StreamReader.cpp
         client/ClientConnectionController.cpp
         client/ServiceConnector.cpp
         PeerFactory.cpp
-        ShellHandler.cpp
 
         DEPENDS
         auxiliary
